# paper-games

./: Cargo.toml  index.html
src/: app.rs  main.rs
src/app/: games.rs  navbar.rs
src/app/games/: naughts_and_crosses.rs  nim.rs
src/app/games/nim/: game.rs  setup.rs
src/app/games/nim/game/: ai.rs
src/app/navbar/: splash.rs
