[package]
name = "paper-games"
version = "0.1.0"
edition = "2021"


[dependencies]
catppuccin-egui = "1.0.2"
eframe = { version = "0.20.1", features = ["persistence",] }
rand = "0.8.5"
serde = "1.0.152"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 3
lto = "thin"

[profile.dev.package."*"]
opt-level = 3
