[package]
name = "paper-games"
version = "0.1.0"
edition = "2021"


[dependencies]
catppuccin-egui = "1.0.2"
eframe = { version = "0.20.1", features = ["persistence",] }
image = { version = "0.24", features = ["jpeg", "png"] }
egui_extras = { version = "0.20.0", features = ["image"] }
serde = "1.0.152"
tinyrand = "0.5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 3
lto = "thin"

[profile.dev.package."*"]
opt-level = 3
